--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,121 @@
-HII
+<!doctype html>
+
+<html lang="en" ng-app="funadamental">
+  <head>
+    <meta charset="utf-8">
+
+    <title>funadmental - parents dashboard</title>
+    <meta name="description" content="money 2020 Hackathon">
+    <meta name="author" content="Tim Pei">
+
+    <link rel="stylesheet" href="/static/lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/app.css">
+
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js"></script>
+    <script type="text/javascript" src="https://code.angularjs.org/1.3.0/angular-animate.min.js"></script>
+    <script type="text/javascript" src="/static/js/app.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.1-beta.2/Chart.min.js"></script>
+    <script src="/static/lib/angles.js"></script>
+  </head>
+  <body ng-controller="baseController">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+            <span class="navbar-brand"><span style="color:lightgreen">fund</span>amental</span>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+        <div class="row">
+
+            <div class="page-header">
+                <h1>Parent Dashboard <small>for your child {{childName}}</small></h1>
+            </div>
+            <h3>{{childName}}'s Savings</h3>
+            <ul>
+                <li><h4>Current Balance: <span style="color: green">{{savingsBalance | currency}}</span></h4></li>
+                <li>
+                    <h4>Balance History:</h4>
+                    <canvas linechart options="options" data="chart" width="700" height="200"></canvas>
+                </li>
+                <li>
+                    <h4>Total Amount Earned From Savings:</h4>
+                    <canvas linechart options="options" data="chart" width="700" height="200"></canvas>
+                </li>
+            </ul>
+            
+            <hr />
+            <form name="allowanceForm">
+                <div class="form-group">
+                    <h3 for="allowance">Weekly Allowance</h3>
+                    <div class="row">
+                        <div class="input-group col-sm-2">
+                            <div class="input-group-addon">$</div>
+                            <input type="number" class="form-control input-lg" id="allowance" placeholder="10.00" ng-model="settings.allowance" min="0">
+                        </div>
+                    </div>
+                    <span class="help-block">This is the amount of allowance set to be transfered to {{childName}} on the first day of the week. An update to allowance will take effect beginning from the next scheduled transfer.</span>
+                </div>
+                <div class="form-group cssSlideUp" ng-show="settings.allowance != defaultSettings.allowance">
+                    <button class="btn btn-primary" ng-click="submitChange()" ng-disabled="allowanceForm.$invalid">Save</button>
+                    <button class="btn btn-default" ng-click="settings.allowance = defaultSettings.allowance">Cancel</button>
+                </div>
+            </form>
+            <hr />
+            <form name="savingsForm">
+                <div class="form-group">
+                    <h3 for="savingsRate">Savings Interest Rate</h3>
+                    <ul>
+                        <li>
+                            <h4>
+                                <span ng-if="settings.savingsRate == defaultSettings.savingsRate">Weekly interest</span> 
+                                <span style="color:red" ng-if="settings.savingsRate != defaultSettings.savingsRate">New Weekly Interest</span>: <span style="color: green">{{savingsBalance * ((settings.savingsRate/100)/12) | currency}}</span>
+                            </h4>
+                        </li>
+                    </ul>
+                    <div class="row">
+                        <div class="input-group col-sm-2">
+                            <input type="number" class="form-control input-lg" id="savingsRate" placeholder="10" ng-model="settings.savingsRate" min="0" max="100">
+                            <div class="input-group-addon">%</div>
+                        </div>
+                    </div>
+                    <span class="help-block">This rate repsents the <strong>annual</strong> interest rate applied to the savings account. Setting a realistic interest rate will encourage your child to start saving and manage their spending habbits.</span>
+                </div>
+                <div class="form-group cssSlideUp" ng-show="settings.savingsRate != defaultSettings.savingsRate">
+                    <button class="btn btn-primary" ng-click="submitChange()" ng-disabled="savingsForm.$invalid">Save</button>
+                    <button class="btn btn-default" ng-click="settings.savingsRate = defaultSettings.savingsRate">Cancel</button>
+                </div>
+            </form>
+            <hr />
+            <form name="loanForm">
+                <div class="form-group">
+                    <h3 for="loanRate">Loan Deduction Rate</h3>
+                    <ul>
+                        <li>
+                            <h4>
+                                <span ng-if="settings.loanRate == defaultSettings.loanRate">Max Loan</span> 
+                                <span style="color:red" ng-if="settings.loanRate != defaultSettings.loanRate">New Max Loan</span>: <span style="color: green">{{settings.allowance * (1 - settings.loanRate/100) | currency}}</span>
+                            </h4>
+                        </li>
+                    </ul>
+                    <div class="row">
+                        <div class="input-group col-sm-2">
+                            <input type="number" class="form-control input-lg" id="loanRate" placeholder="20" ng-model="settings.loanRate" min="0" max="100">
+                            <div class="input-group-addon">%</div>
+                        </div>
+                    </div>
+                    <span class="help-block">If your child wants to spend more than his/her allowance and savings, they have the choice to take a loan up to the next allowance amount, and decduct that amount from the next transaction. However, to encourage good spending habits, a deduction based on the loan rate will be applied, demonstrating the side effects of taking out a loan.</span>
+                </div>
+                <div class="form-group cssSlideUp" ng-show="settings.loanRate != defaultSettings.loanRate">
+                    <button class="btn btn-primary" ng-click="submitChange()" ng-disabled="loanForm.$invalid">Save</button>
+                    <button class="btn btn-default" ng-click="settings.loanRate = defaultSettings.loanRate">Cancel</button>
+                </div>
+            </form>
+        </div>
+    </div>
+  </body>
+</html>
