--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,9 @@
         <div class="navbar-header">
             <span class="navbar-brand"><span style="color:lightgreen">fund</span>amental</span>
         </div>
+        <div class="collapse navbar-collapse">
+            <p class="navbar-text navbar-right">Registered with <img alt="Venmo" id="venmo-icon" src="/static/img/venmo.png"></p>
+        </div>
       </div>
     </nav>
     <div class="container">
@@ -148,7 +151,7 @@
                         <td>
                             <div class="input-group short-btn">
                                 <input class="form-control" type="number" min="0" placeholder="30" ng-model="newInvestment.term_length">
-                                <div class="input-group-addon">days</div>
+                                <div class="input-group-addon">months</div>
                             </div>
                         </td>
                         <td></td>
